# Model-Council

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  phase.md  pyproject.toml
.claude/: settings.local.json
config/: settings.yaml
config/agents/: perspectivist.yaml  promoter.yaml  social_coach.yaml  strategist.yaml  supervisor.yaml
src/: config.py
src/adapters/: anthropic_adapter.py  base.py  openai_adapter.py
src/api/: main.py
src/core/: agent_loader.py  agent_router.py  command_parser.py  context_builder.py  event_bus.py  orchestrator.py
src/data/: backup.py  database.py  models.py  seed.py
src/security/: __init__.py  encryption.py
src/services/: memory_service.py  model_router.py
tests/: conftest.py
tests/test_api/: test_api.py
tests/test_core/: test_agent_loader.py  test_command_parser.py  test_context_builder.py  test_event_bus.py
tests/test_data/: test_models.py
web/: index.html  index.html.bak  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.css  App.jsx  api.js  discuss.css  index.css  router.js
web/stitch_designs/: Advanced_Chat_Details.html  Discussion_Summary_Desktop.html  Discussion_Summary_Mobile.html  Home_Chat_Mobile.html  Login_Mobile.html  Model_Arena_Comparison.html  Model_Arena_Mobile.html  Settings_Mobile.html  Setup_Wizard_Mobile.html  System_Logs_Mobile.html  chat-details.html  chat.html  history.html  index.css  login.html  logs.html  page_01_role_management.html  profile.html  providers.html  roles.html  (+2 more)
(+27 files in other folders)
